Chart preview was added to data and settings pages. Source parser class was implemented for CSV files.

--- a/css/frame.css
+++ b/css/frame.css
@@ -9,7 +9,15 @@
 }
 
 body.has-sidebar #content {
-	rigth: 300px;
+	right: 300px;
+}
+
+#canvas {
+	position: absolute;
+	left: 2%;
+	right: 2%;
+	top: 2%;
+	bottom: 2%;
 }
 
 /******************************************************************************/
