--- a/css/frame.css
+++ b/css/frame.css
@@ -200,10 +200,11 @@ div.group-content .group-description {
 	font-size: 85%;
 	font-weight: normal;
 	float: right;
+	display: none;
 }
 
 .section-description {
-	display: none;
+	/*display: none;*/
 	padding: 0;
 	margin: 0;
 	font-size: 11px;
