--- a/css/frame.css
+++ b/css/frame.css
@@ -236,6 +236,16 @@ div.group-content .group-description {
 	width: 100%;
 }
 
+.section-description ul {
+	margin: 0 0 0 25px;
+	list-style: circle;
+}
+
+.section-description li {
+	list-style: circle;
+	margin: 0;
+}
+
 /******************************************************************************/
 /********************************  TOOLBAR  ***********************************/
 /******************************************************************************/
