Library locking functionality was fixed.

--- a/css/media.css
+++ b/css/media.css
@@ -111,8 +111,10 @@ a.visualizer-library-pagination-page:hover {
 .locker, .locker-loader {
 	left: 0;
 	top: 0;
-	bottom: 0;
-	right: 0;
+	width: 100%;
+	height: 100%;
+/*	bottom: 0;
+	right: 0;*/
 	position: absolute;
 }
 
