--- a/css/library.css
+++ b/css/library.css
@@ -36,6 +36,7 @@
 .visualizer-chart {
 	float: left;
 	padding: 5px;
+	margin: 0 24px 24px 0;
 	border: 1px solid #ddd;
 	-webkit-box-shadow: 0px 0px 8px #ddd;
 	box-shadow: 0px 0px 8px #ddd;
@@ -46,6 +47,8 @@
 	border: 1px solid #ddd;
 	background-color: white;
 	position: relative;
+	width: 347px;
+	height: 271px;
 }
 
 .visualizer-nochart-canvas {
