--- a/css/frame.css
+++ b/css/frame.css
@@ -58,7 +58,7 @@
 
 .group.open {
 	border-bottom: 1px solid #DFDFDF;
-	
+
 }
 
 .group-title {
@@ -157,9 +157,15 @@ div.group-content {
 
 div.group-content .group-description {
 	padding: 0;
-	margin-bottom: 20px;
 	font-weight: 300;
 	font-family: "Montserrat",sans-serif;
+}
+
+.initial-screen .group-description {
+	padding: 0;
+	font-weight: 300;
+	font-family: "Montserrat",sans-serif;
+	padding: 10px 20px 20px;
 }
 
 .section-title {
@@ -258,6 +264,7 @@ div.group-content .group-description {
 	margin-top: 40px;
 	padding: 20px;
 	border-top: 1px dashed #ddd;
+	text-align: center;
 }
 
 .rate-the-plugin{
@@ -266,7 +273,7 @@ div.group-content .group-description {
 }
 
 #rate-stars {
-	margin: 10px 0px 10px 55px;
+  margin: 15px auto;
 	width: 100px;
 	height: 20px;
 	background-image: url('../images/star.png');
@@ -278,7 +285,6 @@ div.group-content .group-description {
 	text-decoration: none;
 	font-family: "Montserrat",sans-serif;
     font-weight: 400;
-	margin: 0px 0px 0px 30px;
 }
 
 #flattr {
@@ -440,16 +446,17 @@ div.group-content .group-description {
 	 cursor: pointer;
 }
 
-#remote-file { 
+#remote-file {
+	float: right;
 	clear: both;
 }
 
  .form-inline {
-    display: inline-block;
-    margin-bottom: 0;
+	  margin: 0 auto;
+	  display: table;
     vertical-align: middle;
   }
-  
+
  .computer-btn{
 	color: #646464 !important;
 	border: medium none rgb(100, 100, 100) !important;
@@ -478,7 +485,7 @@ div.group-content .group-description {
 	border: 1px solid #2f8cea !important;
 	box-shadow: none !important;
 
-	
+
  }
 
  .just-on-pro{
@@ -489,9 +496,9 @@ div.group-content .group-description {
 	opacity: 0.8;
 	margin-bottom: 10px;
  }
- 
- 
- 
+
+
+
  .from-web{
 	margin-top: 0px;
 	margin-bottom: 15px !important;
@@ -612,6 +619,35 @@ div.group-content .group-description {
 	transition: all .3s ease;
 }
 
+.check-pro-btn {
+	height: 40px;
+	width: 245px;
+	display: block;
+	margin: 0 auto;
+}
+
+.advanced-settings-btn, .return-settings-btn {
+	cursor: pointer;
+	display: block;
+	margin: 0 auto;
+	width: 260px;
+	line-height: 34px;
+	font-size: 17px;
+	width: 260px;
+	height: auto;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	margin-bottom: 20px;
+}
+
+.return-settings-btn {
+	margin: 10px auto;
+}
+
+.hidden-setting {
+	display:none;
+}
 
 
 
@@ -625,7 +661,7 @@ div.group-content .group-description {
     font-size: 14px;
   }
   .group-title::after {
-    top: 10px; 
+    top: 10px;
   }
   #rate-stars {
   	margin: 3px 0 10px 40%;
