--- a/css/frame.css
+++ b/css/frame.css
@@ -402,6 +402,18 @@ div.group-content .group-description {
 	background-position: -600px -225px;
 }
 
+.type-box-table .type-label {
+	background-position: -301px -670px;
+}
+
+.type-box-timeline .type-label {
+	background-position: -2px -670px;
+}
+
+.type-box-combo .type-label {
+	background-position: -597px -670px;
+}
+
 /******************************************************************************/
 /********************************  OTHER STYLES  ******************************/
 /******************************************************************************/
