--- a/css/frame.css
+++ b/css/frame.css
@@ -310,6 +310,7 @@ div.group-content .group-description {
 	z-index: 100;
 	left: 0;
 	right: 0;
+	text-align: center;
 	bottom: 0;
 	border-top: 1px solid #DFDFDF;
 	overflow: hidden;
@@ -321,10 +322,14 @@ div.group-content .group-description {
 	float: right;
 }
 
+.toolbar-div a{
+	float:left;
+}
 .toolbar-div{
     display: inline-block;
     vertical-align: top;
 	width: 30%;
+	float:left;
 }
 
 /******************************************************************************/
@@ -415,7 +420,6 @@ div.group-content .group-description {
 }
 
 a.pro-upsell {
-	float: left;
 	margin: 0;
 	display: flex;
 	align-items: center;
@@ -429,6 +433,8 @@ a.pro-upsell {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 	border: 1px solid #2c80d6;
 	transition: all .5s ease-in;
+	top: 10px;
+	position: relative;
  }
 
  a.pro-upsell:hover {
