--- a/css/frame.css
+++ b/css/frame.css
@@ -336,6 +336,27 @@ div.group-content .group-description {
 /********************************  TYPE PICKER   ******************************/
 /******************************************************************************/
 
+.type-box span {
+	display: block;
+	position: absolute;
+	right: 0;
+	bottom: -6px;
+	width: 100%;
+	padding: 4px 0;
+	border-top: 1px dashed #ddd;
+	border-bottom: 1px dashed #ddd;
+	background: #e0e0e0;
+	background-color: #efefef;
+	-webkit-box-shadow: 0 0 8px #ddd;
+	box-shadow: 0 0 8px #ddd;
+	font-weight: bold;
+	text-align: center;
+}
+
+.type-box .pro-upsell {
+	color: #c55555;
+}
+
 #type-picker {
 	width: 952px;
 	margin: 50px auto;
@@ -343,6 +364,7 @@ div.group-content .group-description {
 
 .type-box {
 	float: left;
+	position: relative;
 	margin: 0 20px 20px 0;
 	border: 1px dashed #ddd;
 	background-color: #efefef;
@@ -354,10 +376,22 @@ div.group-content .group-description {
 	margin-right: 0;
 }
 
+.type-box .pro-upsell .visualizder-pro-label {
+	display: inline;
+	position: absolute;
+	top: 0;
+	width: 74px;
+	height: 10px;
+	height: 17px;
+	border: none;
+	color: #fff;
+	background: #c55555;
+}
+
 .type-label {
 	display: block;
 	width: 270px;
-	height: 195px;
+	height: 205px;
 	padding: 15px;
 	border: 1px solid #e0e0e0;
 	background-color: white;
@@ -367,7 +401,7 @@ div.group-content .group-description {
 }
 
 .type-label-selected,
-.type-label:hover {
+.type-box > .type-label:hover {
 	background-image: url(../images/chart_types.png);
 }
 
