--- a/css/library.css
+++ b/css/library.css
@@ -20,7 +20,9 @@
 #visualizer-types {
 	margin: 20px 0 10px;
 }
-
+.visualizer-list-item .visualizer-pro-only{
+	text-decoration: line-through;
+}
 #visualizer-library {
 	margin: 20px 0;
 }
@@ -137,59 +139,9 @@
 	margin-right: 20px;
 }
 
-.page-numbers {
-	padding: 5px 10px;
-	border-radius: 2px;
-	color: white !important;
-	background-color: #aaa;
-	-webkit-box-shadow: 0 0 5px #ccc;
-	box-shadow: 0 0 5px #ccc;
-	font-weight: bold;
-	text-decoration: none;
-}
 
-.page-numbers.current,
-a.page-numbers:hover {
-	background-color: lightcoral;
-	-webkit-box-shadow: 0 0 5px lightpink;
-	box-shadow: 0 0 5px lightpink;
-}
-
-.visualizer-library-pagination {
-	display: none;
-}
 
 #visualizer-search form {
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-
-	-webkit-align-items: center;
-	align-items: center;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
+	text-align: right;
 }
 
-#visualizer-search > form > input[type="text"]:nth-child(1) {
-	height: 30px;
-}
-
-#visualizer-search .button-secondary {
-	margin-left: 20px;
-	padding: 5px 10px;
-	border-radius: 5px;
-	color: white;
-	background-color: lightcoral;
-	-webkit-box-shadow: 0 0 5px lightpink;
-	box-shadow: 0 0 5px lightpink;
-	font-size: 14px;
-	font-weight: bold;
-	line-height: 17px;
-	text-decoration: none;
-}
-
-#visualizer-search .button-secondary:hover {
-	border-color: lightpink;
-	background-color: lightpink;
-}
